fix: badges alignment

--- a/apps/gauzy/src/app/@shared/report/daily-grid/daily-grid.component.scss
+++ b/apps/gauzy/src/app/@shared/report/daily-grid/daily-grid.component.scss
@@ -26,6 +26,12 @@
 }
 .todo-column {
     width: 30%;
+    &.header{
+        width: 28%;
+        &.client{
+            width: 22%;
+        }
+    }
 }
 .time-column {
     width: 15%;
@@ -65,4 +71,9 @@
         padding: 2px 4px;
         border-radius: calc(var(--border-radius) / 2);
     }
+}
+
+.killer-row{
+    border: 1px solid black;
+    width: 100%;
 }
